--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Github Workflow</title>
 </head>
 
 <body>
     <h1>Github Workflow</h1>
+    <p>Welcome to github workflow.</p>
 </body>
 
 </html>
